<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#F4F1E9"
        tools:context=".SignInActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="0dp"
            android:scaleType="center"

            android:src="@drawable/banner"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            app:layout_constraintEnd_toEndOf="@+id/email_login"
            app:layout_constraintStart_toStartOf="@+id/email_login"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#2B463C"
            android:text="@string/log_in"
            android:textColorHint="@color/G1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="@+id/password_login"
            app:layout_constraintStart_toStartOf="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/username" />
        <!--bta5od function launch w gowaha esm el acivity el 3ayza log in button yro7laha
            android:onClick="launchactivity_main2" -->


        <Button
            android:id="@+id/signup_button_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/G4"
            android:onClick="launchactivity_main2"
            android:text="@string/sign_up"
            android:textColorHint="@color/G1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/login_button_login"
            app:layout_constraintStart_toStartOf="@+id/login_button_login"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="425dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>