<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/banner"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_signup"
            app:boxStrokeColor="@color/G4"
            app:endIconMode="clear_text"
            app:endIconTint="@color/G4"
            app:errorEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/last_name_til"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <EditText
                android:id="@+id/first_name_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:circularflow_radiusInDP="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_signup" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_signup"
            app:boxStrokeColor="@color/G4"
            app:endIconMode="clear_text"
            app:endIconTint="@color/G4"
            app:errorEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/email_til"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/first_name_til"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <EditText
                android:id="@+id/last_name_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:circularflow_radiusInDP="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_signup" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:boxStrokeColor="@color/G4"
            app:endIconMode="clear_text"
            app:endIconTint="@color/G4"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/first_name_til"
            app:layout_constraintTop_toBottomOf="@+id/first_name_til">

            <EditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:circularflow_radiusInDP="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:boxStrokeColor="@color/G4"
            app:endIconMode="clear_text"
            app:endIconTint="@color/G4"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/last_name_til"
            app:layout_constraintStart_toStartOf="@+id/first_name_til"
            app:layout_constraintTop_toBottomOf="@+id/email_til">

            <EditText
                android:id="@+id/password_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:circularflow_radiusInDP="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            app:boxStrokeColor="@color/G4"
            app:endIconMode="clear_text"
            app:endIconTint="@color/G4"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/last_name_til"
            app:layout_constraintStart_toStartOf="@+id/first_name_til"
            app:layout_constraintTop_toBottomOf="@+id/password_til">

            <EditText
                android:id="@+id/confirm_password_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:circularflow_radiusInDP="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_button_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/sign_up"
            android:textColor="@color/G1"
            android:textColorHint="@color/G1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_til" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="384dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>